add gameboy visualisation, make buttons work

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,57 @@
 </head>
 
 <body>
-  <div id="root">
-    <h1>
-      <span style="color: red">T</span><span style="color: orange">E</span><span style="color: yellow">T</span><span
-        style="color: green">R</span><span style="color: cyan">I</span><span style="color: purple">S</span>
-    </h1>
+  <div class="container">
+    <div class="gameboy">
+      <div class="gameboy__screenzone">
+        <div id="root">
+          <h1>
+            TETRIS
+          </h1>
+        </div>
+        <div class="gameboy__keys gameboy__keys_options">
+          <div class="gameboy__key-wrapper">
+            <button class="gameboy__key gameboy__key_option" id="keyStart"></button>
+            <div class="gameboy__key-descr">start</div>
+          </div>
+          <div class="gameboy__key-wrapper">
+            <button class="gameboy__key gameboy__key_option" id="keyMusic"></button>
+            <div class="gameboy__key-descr">music</div>
+          </div>
+          <div class="gameboy__key-wrapper">
+            <button class="gameboy__key gameboy__key_option" id="keySound"></button>
+            <div class="gameboy__key-descr">sound</div>
+          </div>
+        </div>
+
+        <div class="gameboy__controlblock">
+          <div class="gameboy__keys gameboy__keys_control">
+            <button class="gameboy__key gameboy__key_control" id="keyUp"></button>
+            <div class="gameboy__keys_control-wrapper">
+              <button class="gameboy__key gameboy__key_control" id="keyLeft"></button>
+              <img class="gameboy__cross-img" src="img/cross.svg" alt="cross aroows">
+              <button class="gameboy__key gameboy__key_control" id="keyRight"></button>
+            </div>
+            <button class="gameboy__key gameboy__key_control" id="keyDown"></button>
+          </div>
+
+          <div class="gameboy__keys gameboy__keys_control">
+            <div class="gameboy__key-wrapper">
+              <button class="gameboy__key gameboy__key_rotate" id="keyRotate"></button>
+              <div class="gameboy__key-descr">rotate</div>
+            </div>
+          </div>
+        </div>
+        <div class="gameboy__about">
+          <hr>
+          <ul class="gameboy__links">
+            <li><a href="https://zgennadiy.com/" target="_blank">zgennadiy.com</a></li>
+            <li><a href="https://github.com/ZGennadiy/Tetris" target="_blank">github</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
   </div>
 
   <script src="./js/script.js" type="module"></script>
