--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container unselectable">
     <div class="gameboy">
       <div class="gameboy__screenzone">
         <div id="root">
