add how to play modal

--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,33 @@
             </div>
           </div>
         </div>
+        <!-- Modal How to play -->
+        <div class="modal__wrapper">
+          <button class="btn">?</button>
+          <div class="modal">
+            <div class="modal__box">
+              <h3>How to play</h3>
+              <hr>
+              <p>Start / Pause / Restart:</p>
+              <p><i>Key P or Start button</i></p>
+              <hr>
+              <p>Move shape:</p>
+              <p><i>Arrow keys or Cross buttons</i></p>
+              <hr>
+              <p>Rotate shape:</p>
+              <p><i>Up key or Rotate/Up button</i></p>
+              <hr>
+              <p>Music on/off:</p>
+              <p><i>Key M or Music button</i></p>
+              <hr>
+              <p>Sound on/off:</p>
+              <p><i>Key S or Sound button</i></p>
+              <hr>
+              <p><b>Click anywhere to close</b></p>
+            </div>
+          </div>
+        </div>
+        <!-- End Modal How to play -->
         <div class="gameboy__about">
           <hr>
           <ul class="gameboy__links">
